--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.1.0",
+    "@angular/animations": "^7.1.4",
+    "@angular/cdk": "^7.2.0",
     "@angular/common": "~7.1.0",
     "@angular/compiler": "~7.1.0",
     "@angular/core": "~7.1.0",
@@ -19,8 +20,13 @@
     "@angular/platform-browser": "~7.1.0",
     "@angular/platform-browser-dynamic": "~7.1.0",
     "@angular/router": "~7.1.0",
+    "@nebular/theme": "^3.0.1",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "ng2-completer": "^2.0.8",
+    "ng2-smart-table": "^1.3.5",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "tasks": "0.0.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
